<resources>
    <string name="app_name">Gold Invest</string>
    <string name="version">All rights reserved \u00a9KHONGKHWAN YAOWARAT. All rights reserved.\nApplications Gold Invest </string>
    <string name="version_text">Version </string>
    <string name="google_android_map_api_key">AIzaSyDIQv7d3q6IpxrW6dtvQb67ZCohgfvAByw</string>
    <string name="dot">\u2022</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="page_404">Page is under construction.</string>
    <string name="photo">Photo</string>
    <string name="tpin">Pin</string>
    <string name="tforce">Force Change</string>
    <string name="tforget">Forget Password</string>
    <string name="topen">Open Account</string>
    <string name="thome">Home</string>
    <string name="thistory">History</string>
    <string name="thisdetail">Detail</string>
    <string name="tmore">More</string>
    <string name="tsett">Settings</string>
    <string name="tpric">Price Alert</string>
    <string name="tnews">News</string>
    <string name="tnewd">News Detail</string>
    <string name="tanal">Analysis</string>
    <string name="tgrap">Graph</string>
    <string name="tcont">Contact</string>
    <string name="tpaym">Payment</string>
    <string name="tguid">Guideline</string>
    <string name="tnoti">Notices</string>
    <string name="tclea">Clear Port</string>
    <string name="tlang">Change Language</string>
    <string name="tauto">Auto</string>
    <string name="tlight">Light</string>
    <string name="tdark">Dark</string>
    <string name="ms_sec1">Saving Account Control</string>
    <string name="ms_sec2">Security Account Control</string>
    <string name="ms_sec3">Current User</string>
    <string name="sub_user">Remember username</string>
    <string name="sub_pin">Remember pin code</string>
    <string name="sub_bio">Applicable on 13+ and able to use only when you already enable feature “Fingerprint / Face ID \u0026 Passcode” and add your fingerprint in iPhone’s settings. (Settings >> Touch ID / Face ID \u0026 Password >> Add a Fingerprint / Face ID).</string>
    <string name="sub_always">Prevent the system from putting the device into a sleep state after application not receives user input for a period of time.</string>
    <string name="sub_cpass">Change new password</string>
    <string name="sub_cpin">Change new PIN</string>
    <string name="sub_account">Account</string>
    <string name="authen">authenticating..</string>
    <string name="bio">Biometric Authentication</string>
    <string name="always">Always ON</string>
    <string name="crpwd">Current Password</string>
    <string name="crpin">Current PIN</string>
    <string name="vl_all">New password must be compound with</string>
    <string name="vl_1">1. At least 6 characters</string>
    <string name="vl_2">2. At least an uppercase letter</string>
    <string name="vl_3">3. At least a lowercase letter </string>
    <string name="vl_4">4. At least a digit</string>
    <string name="dark_mode">Change Theme</string>
    <string name="sub_dark_mode">Open the dark mode for saving energy</string>
    <string name="sub_lang">Change Language</string>
    <string name="tab_home">Home</string>
    <string name="tab_port">Portfolio</string>
    <string name="tab_hist">History</string>
    <string name="tab_more">More</string>
    <string name="un_rt">Real Time</string>
    <string name="un_po">Place Order</string>
    <string name="un_so">Stop Order</string>
    <string name="un_qty">QTY</string>
    <string name="un_qtys">Select Quantity</string>
    <string name="un_gram">gram</string>
    <string name="un_baht">BG</string>
    <string name="un_kilo">KG</string>
    <string name="un_mb">Baht</string>
    <string name="un_price">Price</string>
    <string name="un_usd">USD</string>
    <string name="un_thb">THB</string>
    <string name="un_here">Fill here</string>
    <string name="un_qtys_edit">Fill here</string>
    <string name="un_b">B</string>
    <string name="lang">EN</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="npass">New Password</string>
    <string name="cpass">Change Password</string>
    <string name="conf_cpass">Confirm New Password</string>
    <string name="conf_cpin">Confirm New PIN</string>
    <string name="npin">New PIN</string>
    <string name="cpin">Change PIN</string>
    <string name="regis_email">Registered email</string>
    <string name="manage">Edit Products</string>
    <string name="prod">Product</string>
    <string name="sell">Sell</string>
    <string name="buy">Buy</string>
    <string name="ws_type">Select Type</string>
    <string name="ws_order">Select Order Type</string>
    <string name="ws_credit">Credit Limit</string>
    <string name="ws_amount">Select Amount</string>
    <string name="ws_product">Select Product</string>
    <string name="read_all">Mask all as read</string>
    <string name="delete_order">Delete Order</string>
    <string name="pa_head">Price Alert Settings</string>
    <string name="pa_type">Order Type</string>
    <string name="pa_add">Fill Price</string>
    <string name="pa_list">Price Alert List</string>
    <string name="nws_head">Headline News</string>
    <string name="nws_detail">News Detail</string>
    <string name="nws_label">Highlights</string>
    <string name="nws_all"><u>Read more</u></string>
    <string name="usr_acc">A/C</string>
    <string name="usr_qu">QU</string>
    <string name="usr_typ">Type</string>
    <string name="usr_ord">Order</string>
    <string name="usr_spo">Spot</string>
    <string name="usr_pri">Price</string>
    <string name="usr_qty">QTY</string>
    <string name="usr_tot">Total</string>
    <string name="usr_all_tot">Total</string>
    <string name="usr_dat">Date</string>
    <string name="usr_bs">BU/SE</string>
    <string name="usr_due">Due</string>
    <string name="usr_sta">Status</string>
    <string name="usr_fif">FIFO</string>
    <string name="usr_pay">Pay</string>
    <string name="do_lead">You have </string>
    <string name="do_trail"> seconds for confirming order.</string>
    <string name="do_sec">Seconds</string>
    <string name="detail">Detail</string>
    <string name="display">Display</string>
    <string name="hidden">Hidden</string>
    <string name="no_item">No Item</string>
    <string name="py_head">Easy Payment Confirm</string>
    <string name="py_cam">Camera</string>
    <string name="py_gal">Gallery</string>
    <string name="py_cams">Attach your payment by take a photo</string>
    <string name="py_gals">Attach your payment by chosen from gallery</string>
    <string name="py_bind">Preview Attachments</string>
    <string name="py_none">No Preview</string>
    <string name="cp_select">Please Select Transferring</string>
    <string name="cp_port">My Portfoilio</string>
    <string name="cp_bank">Transfer/Receive</string>
    <string name="cp_tot">Total</string>
    <string name="cp_due">Due date</string>
    <string name="cp_pro">Product</string>
    <string name="cp_qty">Quantity</string>
    <string name="cp_pri">Price</string>
    <string name="cp_ovd">Overdue</string>
    <string name="port_unr">Unrealized P/L</string>
    <string name="port_rea">Realized P/L</string>
    <string name="port_cre">Credit</string>
    <string name="port_res">Result</string>
    <string name="port_avg">Average</string>
    <string name="port_qty">Quantity</string>
    <string name="port_mar">Market Price</string>
    <string name="port_prl">Profit/Loss</string>
    <string name="port_pro">Products which deposited with company (All deposite types)</string>
    <string name="port_mag">Margin</string>
    <string name="port_dfs">Deposite for Sell</string>
    <string name="port_dfb">Deposite from Buy</string>
    <string name="port_fix">Fixed</string>
    <string name="port_mon">Money which deposited with company (All deposite types)</string>
    <string name="port_mon_hd">Money</string>
    <string name="port_deb">Deposit Balance</string>
    <string name="port_avb">Available Balance</string>
    <string name="port_nus">Net Usable</string>
    <string name="port_nub">Net Unusable</string>
    <string name="port_out">Money Outstanding</string>
    <string name="port_cus">Customer Outstanding</string>
    <string name="port_com">Company Outstanding</string>
    <string name="port_sto">Stock Outstanding</string>
    <string name="port_not">No Trading Data</string>
    <string name="port_not_data">No Data Found.</string>
    <string name="alert_authen">Please fill your authentications below.</string>
    <string name="alert_change_new">Please change a new password.</string>
    <string name="alert_forget">New password will be sent to register email</string>
    <string name="alert_sign_in">Authentication failed, Please try again.</string>
    <string name="alert_pass_code">Enter PIN code</string>
    <string name="alert_hotline">Gold Trading Hotline</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_close">Close</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_exit">Exit</string>
    <string name="btn_call">Call</string>
    <string name="btn_select">Select</string>
    <string name="btn_back">Back</string>
    <string name="btn_out">Sign out</string>
    <string name="btn_add">Add</string>
    <string name="btn_del">Delete</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="btn_forget">Forget Password</string>
    <string name="btn_open">Open Account</string>
    <string name="btn_chat">Line Chat</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_backspace">Back</string>
    <string name="pf_post">Posted : </string>
    <string name="latitude">13.65429406463696</string>
    <string name="longtitude">100.52257892655302</string>
    <string name="branch">Big C, Suksawat branch</string>
    <string name="company">KHONGKHWAN YAOWARAT Co.,Ltd.</string>
    <string name="brand">Big C, Suksawat branch</string>
    <string name="contact">Contact us</string>
    <string name="info">Address: 94 Big C Wallet, Suksawat branch, 2nd floor, opposite No. 18,\nBang Phueng Subdistrict, Phra Pradaeng District,\nSamut Prakan 10130\n\u25CF\t\tcontact : 089-129-7478\n\t\t\t\t\t\t\t\t\t\t\t\t063-664-9646\n\u25CF\t\temail : info@goldinvestplus.com\n\u25CF\t\twebsite : www.goldinvestplus.com\n\u25CF\t\tLine Official : @140anals\n\u25CF\t\tFacebook : Gold invest</string>
    <string name="BUY">BUY</string>
    <string name="SELL">SELL</string>
    <string name="ud_title">Account Deletion Form</string>
    <string name="ud_info">Use this form to make a delete request regarding your data. Enter your details and switching on the delete account data button, then submit the form.</string>
    <string name="ud_info2">Data Subject Details: We need your name, username and email address in order to process your request and safeguard your data. We will use the data gathered here only to process your request and for record-keeping as required by law.\nYou will receive an email to verify your information within 48 hrs. Follow the instructions you will receive to complete processing of your request.</string>
    <string name="ud_input_name">Firstname Lastname</string>
    <string name="ud_input_user">Username</string>
    <string name="ud_input_mail">Email Address</string>
    <string name="ud_lb_del">delete account data</string>
    <string name="ud_submit">Submit Request</string>
</resources>