<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frag_force_change"
    style="@style/Fragment.Default"
    tools:context="com.sctgold.wgold.android.fragments.ForgetPasswordFragment">

    <ImageView
        android:id="@+id/logo_app_fp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/brand"
        app:layout_constraintBottom_toTopOf="@id/force_change_form"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="@dimen/logo_width" />

    <LinearLayout
        android:id="@+id/force_change_form"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:foregroundGravity="bottom"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_app_fp"
        app:layout_constraintWidth_percent="0.85">


        <TextView
            android:id="@+id/lb_force_change"
            style="@style/Label.Status_sign_in"
            android:text="@string/alert_forget" />

        <EditText
            android:id="@+id/username"
            style="@style/EditText.Default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />


        <EditText
            android:id="@+id/register_email"
            style="@style/EditText.Default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/regis_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/sign_in"
            style="@style/Button.authen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/d20"
            android:text="@string/btn_confirm" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
