<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frag_change_password"
    style="@style/Fragment.Default"
    android:padding="@dimen/pad_h"
    tools:context="com.sctgold.ltsgold.android.fragments.ChangePasswordFragment">

    <LinearLayout
        android:id="@+id/change_password_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/card_pad">

        <EditText
            android:id="@+id/change_password_current"
            style="@style/EditText.Default"
            android:hint="@string/crpwd"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/change_password_new"
            style="@style/EditText.Default"
            android:hint="@string/npass"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/pad_v"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/change_password_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/wo" />

            <TextView
                android:id="@+id/change_password_opt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/wo" />

            <TextView
                android:id="@+id/change_password_opt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/wo" />

            <TextView
                android:id="@+id/change_password_opt3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/wo" />

            <TextView
                android:id="@+id/change_password_opt4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/wo" />

        </LinearLayout>

        <EditText
            android:id="@+id/change_password_confirm"
            style="@style/EditText.Default"
            android:hint="@string/conf_cpass"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/change_password_save"
            style="@style/Button.Default"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/d20"
            android:text="@string/btn_confirm" />

        <TextView
            android:id="@+id/testmsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>